# Control-Center

./: CMakeLists.txt  README.md  main.cc
Control Center (Linux)/: CMakeLists.txt  CMakeLists.txt.user.e29ec98  controlcenter.cpp  controlcenter.h  controlcenter.ui  main.cpp
Control Center (Windows)/: ControlCenter.pro  controlcenter.cpp  controlcenter.h  controlcenter.ui  main.cpp
whi3per/: CMakeLists.txt
whi3per/cmake_utility/: organize_source_files.cmake
whi3per/include/private/whi3per/: system.hh  volume.hh
whi3per/include/public/whi3per/: controlcenter.hh
whi3per/src/: brightness.cc  controlcenter.cc  hardware.cc  system.cc  volume.cc
whi3perlib/: CMakeLists.txt
whi3perlib/cmake_utility/: organize_source_files.cmake
whi3perlib/include/private/whi3perlib/: brightness.hh  hardware.hh
whi3perlib/include/public/whi3perlib/: controlcenter.hh
whi3perlib/src/: brightness.cc  controlcenter.cc  hardware.cc  system.cc  volume.cc
